--- a/app/src/main/res/drawable/option_background_normal.xml
+++ b/app/src/main/res/drawable/option_background_normal.xml
@@ -1,4 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/white" />
+    <corners
+        android:bottomLeftRadius="24dp"
+        android:bottomRightRadius="24dp"
+        android:topLeftRadius="24dp"
+        android:topRightRadius="24dp" />
+    <padding
+        android:bottom="0dp"
+        android:left="0dp"
+        android:right="0dp"
+        android:top="0dp" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/grey" />
+
+    <gradient
+        android:angle="-0"
+        android:endColor="@color/white"
+        android:startColor="@color/white" />
 </shape>
