--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,4 +1,4 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,7 +14,7 @@
         <RelativeLayout
             android:id="@+id/startLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:visibility="visible">
 
 
@@ -22,7 +22,6 @@
                 android:id="@+id/closeButton"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:layout_centerVertical="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
                 android:src="@drawable/ic_white_cross"
@@ -42,9 +41,21 @@
                 android:text="Your quiz will be live in "
                 android:textColor="@color/black" />
 
+
+            <TextView
+                android:id="@+id/timerCountdown"
+                android:layout_below="@id/timer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="2d 3h 45m "
+                android:gravity="center"
+                android:textColor="@color/colorAccent"
+                android:textSize="26sp"/>
+
             <TextView
                 android:id="@+id/rule"
-                android:layout_below="@id/timer"
+                android:layout_above="@+id/startButton"
+                android:layout_marginTop="250dp"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -52,27 +63,28 @@
                 android:layout_marginEnd="8dp"
                 android:gravity="center"
                 android:lines="5"
-                android:text="Remember, each question is compulsory, has a time limit and after start of quiz you can't attempt it again"
+                android:textSize="16sp"
+                android:text="Follow the rules and remember: \n Any attempt to exit from the page will result in immediate end of the quiz"
                 android:textColor="@color/black" />
+
+
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/startButton"
                 android:layout_width="match_parent"
+                android:layout_alignParentBottom="true"
                 android:layout_height="60dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_below="@+id/rule"
                 android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
                 android:background="@drawable/circular_gradient_background"
                 android:backgroundTint="@color/option_background_pressed"
                 android:elevation="2dp"
                 android:text="START"
                 android:textSize="18sp"
-                android:textColor="@color/white"
-                />
+                android:textColor="@color/white" />
 
         </RelativeLayout>
 
@@ -206,44 +218,44 @@
         <RelativeLayout
             android:id="@+id/endLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:visibility="gone">
 
 
             <TextView
                 android:id="@+id/endMessage"
                 android:layout_width="300dp"
+                android:layout_marginTop="50dp"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:gravity="center"
                 android:lines="5"
-                android:text="Congratulations on completing the quiz. Please wait for the results they will be announced soon. Thank You"
+                android:textSize="16sp"
+                android:text="Congratulations on completing the quiz.\n\nPlease wait for the results they will be announced soon. Thank You"
                 android:textColor="@color/black" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/doneButton"
                 android:layout_width="match_parent"
+                android:layout_alignParentBottom="true"
                 android:layout_height="60dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_below="@+id/endMessage"
                 android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
                 android:background="@drawable/circular_gradient_background"
                 android:backgroundTint="@color/option_background_pressed"
                 android:elevation="2dp"
-                android:text="Done"
+                android:text="DONE"
                 android:textSize="18sp"
-                android:textColor="@color/white"
-                />
+                android:textColor="@color/white" />
 
         </RelativeLayout>
 
     </RelativeLayout>
 
 
-</ScrollView>
+</RelativeLayout>
