--- a/app/src/main/res/layout/fragment_participant.xml
+++ b/app/src/main/res/layout/fragment_participant.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Enter Chat Room"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorAccent"
                 android:id="@+id/chatRoom"
                 android:padding="5dp"
                 android:gravity="center"
