--- a/app/src/main/res/layout/snippet_jury_public_total.xml
+++ b/app/src/main/res/layout/snippet_jury_public_total.xml
@@ -1,19 +1,17 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
+<merge xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/white"
+        app:cardUseCompatPadding="true"
         app:cardCornerRadius="10dp"
         app:cardElevation="2dp"
-        app:cardUseCompatPadding="true"
         app:contentPadding="3dp">
-
         <TableLayout
-            android:id="@+id/jurytable"
             android:layout_width="match_parent"
+            android:id="@+id/jurytable2"
             android:layout_height="wrap_content">
 
             <TableRow
@@ -29,38 +27,38 @@
                     android:textColor="@color/black" />
 
                 <TextView
+                    android:id="@+id/totalParam1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+
+                    android:text="Jury"
+                    android:textColor="@color/black" />
+                <TextView
+                    android:id="@+id/totalParam2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
-                    android:text="Accuracy"
-                    android:textColor="@color/black" />
 
+                    android:text="Votes"
+                    android:textColor="@color/black" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
-                    android:text="Speed"
+
+                    android:text="Total"
                     android:textColor="@color/black" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal"
-                    android:text="Consistency"
-                    android:textColor="@color/black" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal"
-                    android:text="Overall"
-                    android:textColor="@color/black" />
 
             </TableRow>
+
+
+
 
         </TableLayout>
 
