--- a/app/src/main/res/layout/snippet_jury_table.xml
+++ b/app/src/main/res/layout/snippet_jury_table.xml
@@ -1,80 +1,69 @@
-<merge xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <androidx.cardview.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/white"
-        app:cardUseCompatPadding="true"
         app:cardCornerRadius="10dp"
         app:cardElevation="2dp"
+        app:cardUseCompatPadding="true"
         app:contentPadding="3dp">
-<TableLayout
-    android:layout_width="match_parent"
-    android:id="@+id/jurytable"
-    android:layout_height="wrap_content">
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        <TableLayout
+            android:id="@+id/jurytable"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:text="Participant"
-            android:textColor="@color/black" />
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:text="Participant"
+                    android:textColor="@color/black" />
 
-            android:text="Jury 1"
-            android:textColor="@color/black" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
+                <TextView
+                    android:id="@+id/param1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:text="Jury 1"
+                    android:textColor="@color/black" />
 
-            android:text="Jury 2"
-            android:textColor="@color/black" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
+                <TextView
+                    android:id="@+id/param2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:text="Jury 2"
+                    android:textColor="@color/black" />
 
-            android:text="Jury 2"
-            android:textColor="@color/black" />
+                <TextView
+                    android:id="@+id/param3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:text="Jury 2"
+                    android:textColor="@color/black" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:text="Overall"
+                    android:textColor="@color/black" />
 
-            android:text="Overall"
-            android:textColor="@color/black" />
-
-
-    </TableRow>
-
-
-
-
-
-
-
-
-
-
-
-</TableLayout>
-
-
-</androidx.cardview.widget.CardView>
+            </TableRow>
+        </TableLayout>
+    </androidx.cardview.widget.CardView>
 </merge>
