--- a/app/src/main/res/layout/activity_joining_form.xml
+++ b/app/src/main/res/layout/activity_joining_form.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".contest.joined.JoiningForm">
+    tools:context=".contest.joined.JoiningFormActivity">
 
     <RelativeLayout
         android:id="@+id/reLayout1"
