--- a/app/src/main/res/layout/fragment_contest_overview.xml
+++ b/app/src/main/res/layout/fragment_contest_overview.xml
@@ -65,6 +65,7 @@
                     android:textColor="@color/colorAccent"
                     android:id="@+id/chatRoom"
                     android:padding="5dp"
+                    android:visibility="gone"
                     android:gravity="center"
                     android:textAllCaps="true"
                     android:layout_margin="3dp"
