--- a/app/src/main/res/layout/snippet_top_bar.xml
+++ b/app/src/main/res/layout/snippet_top_bar.xml
@@ -5,6 +5,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:id="@+id/topB"
         android:background="@drawable/white_border">
 
         <androidx.appcompat.widget.Toolbar
