--- a/app/src/main/res/layout/activity_contest_details.xml
+++ b/app/src/main/res/layout/activity_contest_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    tools:context=".contest.create.CheckContest">
+    tools:context=".contest.create.CC_CheckActivity">
 
     <RelativeLayout
         android:id="@+id/reLayout1"
